comp/compiladores_rafael/TLLParser.output
   0  $accept : file $end

   1  file : decl listd

   2  decl : var
   3       | funct

   4  var : qualif type tIDENTIFIER '=' expr
   5      | type tIDENTIFIER '=' expr
   6      | type tIDENTIFIER

   7  type : tTYPEINT
   8       | tTYPEREAL
   9       | tTYPESTRING
  10       | spectype

  11  funct : qualif type tIDENTIFIER '(' varlist ')' fret
  12        | qualif type tIDENTIFIER '(' varlist ')' fret block
  13        | qualif type tIDENTIFIER '(' varlist ')' block
  14        | type tIDENTIFIER '(' varlist ')' fret
  15        | type tIDENTIFIER '(' varlist ')' fret block
  16        | type tIDENTIFIER '(' varlist ')' block
  17        | qualif tVOID tIDENTIFIER '(' varlist ')' fret
  18        | qualif tVOID tIDENTIFIER '(' varlist ')' fret block
  19        | qualif tVOID tIDENTIFIER '(' varlist ')' block
  20        | tVOID tIDENTIFIER '(' varlist ')' fret
  21        | tVOID tIDENTIFIER '(' varlist ')' fret block
  22        | tVOID tIDENTIFIER '(' varlist ')' block
  23        | qualif type tIDENTIFIER '(' varlist ')'
  24        | type tIDENTIFIER '(' varlist ')'
  25        | qualif tVOID tIDENTIFIER '(' varlist ')'
  26        | tVOID tIDENTIFIER '(' varlist ')'

  27  qualif : tPUBLIC
  28         | tUSE

  29  spectype : '<' tTYPEINT '>'
  30           | '<' tTYPEREAL '>'
  31           | '<' tTYPESTRING '>'
  32           | '<' spectype '>'
  33           | '[' tTYPEINT ']'
  34           | '[' tTYPEREAL ']'
  35           | '[' tTYPESTRING ']'
  36           | '[' spectype ']'

  37  fret : '=' literal

  38  literal : tREAL
  39          | tINTEGER
  40          | string

  41  string : tSTRING
  42         | string tSTRING

  43  block : tSTART_BLOCK decl listd tENDLINE stmt list tEND_BLOCK
  44        | tSTART_BLOCK decl listd tEND_BLOCK
  45        | tSTART_BLOCK stmt list tEND_BLOCK
  46        | tSTART_BLOCK tEND_BLOCK

  47  listd :
  48        | listd tENDLINE decl

  49  stmt : expr tPN
  50       | expr '!'
  51       | expr
  52       | tWHILE expr tDO stmt
  53       | tWHILE expr tDO stmt tELSE stmt
  54       | tFOR expr ';' expr ';' expr tDO stmt
  55       | tFOR varlist ';' expr ';' expr tDO stmt
  56       | tDO stmt tUNTIL expr
  57       | tDO stmt tUNTIL expr tELSE stmt
  58       | block
  59       | tRETURN
  60       | tNEXT
  61       | tSTOP
  62       | tNEXT tINTEGER
  63       | tSTOP tINTEGER
  64       | tIF expr tTHEN stmt
  65       | tIF expr tTHEN stmt tELSE stmt
  66       | tIF expr tTHEN stmt elsif

  67  elsif : tELSIF expr tTHEN stmt elsif
  68        | tELSIF expr tTHEN stmt
  69        | tELSIF expr tTHEN stmt tELSE stmt

  70  varlist : var
  71          | varlist ',' var
  72          |

  73  exprlist : exprlist ',' expr
  74           | expr
  75           |

  76  list :
  77       | list tENDLINE stmt

  78  expr : tINTEGER
  79       | tIDENTIFIER '=' expr
  80       | tREAL
  81       | string
  82       | tIDENTIFIER
  83       | '+' expr
  84       | '-' expr
  85       | expr '?'
  86       | expr '+' expr
  87       | expr '-' expr
  88       | expr '*' expr
  89       | expr '/' expr
  90       | expr '%' expr
  91       | expr '<' expr
  92       | expr '>' expr
  93       | expr tGE expr
  94       | expr tLE expr
  95       | expr tNE expr
  96       | expr tEQ expr
  97       | expr '|' expr
  98       | expr '&' expr
  99       | '(' expr ')'
 100       | '@'
 101       | expr '^' expr
 102       | tIDENTIFIER '(' exprlist ')'
 103       | '@' '=' expr
 104       | '@' '(' exprlist ')'
 105       | tIDENTIFIER '[' expr ']'
 106       | tIDENTIFIER '[' expr ']' '=' expr
 107       | '#' expr

state 0
	$accept : . file $end  (0)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	tVOID  shift 6
	'<'  shift 7
	'['  shift 8
	.  error

	file  goto 9
	decl  goto 10
	funct  goto 11
	var  goto 12
	qualif  goto 13
	type  goto 14
	spectype  goto 15


state 1
	qualif : tUSE .  (28)

	.  reduce 28


state 2
	qualif : tPUBLIC .  (27)

	.  reduce 27


state 3
	type : tTYPEINT .  (7)

	.  reduce 7


state 4
	type : tTYPEREAL .  (8)

	.  reduce 8


state 5
	type : tTYPESTRING .  (9)

	.  reduce 9


state 6
	funct : tVOID . tIDENTIFIER '(' varlist ')' fret  (20)
	funct : tVOID . tIDENTIFIER '(' varlist ')' fret block  (21)
	funct : tVOID . tIDENTIFIER '(' varlist ')' block  (22)
	funct : tVOID . tIDENTIFIER '(' varlist ')'  (26)

	tIDENTIFIER  shift 16
	.  error


state 7
	spectype : '<' . tTYPEINT '>'  (29)
	spectype : '<' . tTYPEREAL '>'  (30)
	spectype : '<' . tTYPESTRING '>'  (31)
	spectype : '<' . spectype '>'  (32)

	tTYPEINT  shift 17
	tTYPEREAL  shift 18
	tTYPESTRING  shift 19
	'<'  shift 7
	'['  shift 8
	.  error

	spectype  goto 20


state 8
	spectype : '[' . tTYPEINT ']'  (33)
	spectype : '[' . tTYPEREAL ']'  (34)
	spectype : '[' . tTYPESTRING ']'  (35)
	spectype : '[' . spectype ']'  (36)

	tTYPEINT  shift 21
	tTYPEREAL  shift 22
	tTYPESTRING  shift 23
	'<'  shift 7
	'['  shift 8
	.  error

	spectype  goto 24


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	file : decl . listd  (1)
	listd : .  (47)

	.  reduce 47

	listd  goto 25


state 11
	decl : funct .  (3)

	.  reduce 3


state 12
	decl : var .  (2)

	.  reduce 2


state 13
	var : qualif . type tIDENTIFIER '=' expr  (4)
	funct : qualif . type tIDENTIFIER '(' varlist ')' fret  (11)
	funct : qualif . type tIDENTIFIER '(' varlist ')' fret block  (12)
	funct : qualif . type tIDENTIFIER '(' varlist ')' block  (13)
	funct : qualif . tVOID tIDENTIFIER '(' varlist ')' fret  (17)
	funct : qualif . tVOID tIDENTIFIER '(' varlist ')' fret block  (18)
	funct : qualif . tVOID tIDENTIFIER '(' varlist ')' block  (19)
	funct : qualif . type tIDENTIFIER '(' varlist ')'  (23)
	funct : qualif . tVOID tIDENTIFIER '(' varlist ')'  (25)

	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	tVOID  shift 26
	'<'  shift 7
	'['  shift 8
	.  error

	type  goto 27
	spectype  goto 15


state 14
	var : type . tIDENTIFIER '=' expr  (5)
	var : type . tIDENTIFIER  (6)
	funct : type . tIDENTIFIER '(' varlist ')' fret  (14)
	funct : type . tIDENTIFIER '(' varlist ')' fret block  (15)
	funct : type . tIDENTIFIER '(' varlist ')' block  (16)
	funct : type . tIDENTIFIER '(' varlist ')'  (24)

	tIDENTIFIER  shift 28
	.  error


state 15
	type : spectype .  (10)

	.  reduce 10


state 16
	funct : tVOID tIDENTIFIER . '(' varlist ')' fret  (20)
	funct : tVOID tIDENTIFIER . '(' varlist ')' fret block  (21)
	funct : tVOID tIDENTIFIER . '(' varlist ')' block  (22)
	funct : tVOID tIDENTIFIER . '(' varlist ')'  (26)

	'('  shift 29
	.  error


state 17
	spectype : '<' tTYPEINT . '>'  (29)

	'>'  shift 30
	.  error


state 18
	spectype : '<' tTYPEREAL . '>'  (30)

	'>'  shift 31
	.  error


state 19
	spectype : '<' tTYPESTRING . '>'  (31)

	'>'  shift 32
	.  error


state 20
	spectype : '<' spectype . '>'  (32)

	'>'  shift 33
	.  error


state 21
	spectype : '[' tTYPEINT . ']'  (33)

	']'  shift 34
	.  error


state 22
	spectype : '[' tTYPEREAL . ']'  (34)

	']'  shift 35
	.  error


state 23
	spectype : '[' tTYPESTRING . ']'  (35)

	']'  shift 36
	.  error


state 24
	spectype : '[' spectype . ']'  (36)

	']'  shift 37
	.  error


state 25
	file : decl listd .  (1)
	listd : listd . tENDLINE decl  (48)

	tENDLINE  shift 38
	$end  reduce 1


state 26
	funct : qualif tVOID . tIDENTIFIER '(' varlist ')' fret  (17)
	funct : qualif tVOID . tIDENTIFIER '(' varlist ')' fret block  (18)
	funct : qualif tVOID . tIDENTIFIER '(' varlist ')' block  (19)
	funct : qualif tVOID . tIDENTIFIER '(' varlist ')'  (25)

	tIDENTIFIER  shift 39
	.  error


state 27
	var : qualif type . tIDENTIFIER '=' expr  (4)
	funct : qualif type . tIDENTIFIER '(' varlist ')' fret  (11)
	funct : qualif type . tIDENTIFIER '(' varlist ')' fret block  (12)
	funct : qualif type . tIDENTIFIER '(' varlist ')' block  (13)
	funct : qualif type . tIDENTIFIER '(' varlist ')'  (23)

	tIDENTIFIER  shift 40
	.  error


state 28
	var : type tIDENTIFIER . '=' expr  (5)
	var : type tIDENTIFIER .  (6)
	funct : type tIDENTIFIER . '(' varlist ')' fret  (14)
	funct : type tIDENTIFIER . '(' varlist ')' fret block  (15)
	funct : type tIDENTIFIER . '(' varlist ')' block  (16)
	funct : type tIDENTIFIER . '(' varlist ')'  (24)

	'='  shift 41
	'('  shift 42
	$end  reduce 6
	tEND_BLOCK  reduce 6
	tENDLINE  reduce 6


state 29
	funct : tVOID tIDENTIFIER '(' . varlist ')' fret  (20)
	funct : tVOID tIDENTIFIER '(' . varlist ')' fret block  (21)
	funct : tVOID tIDENTIFIER '(' . varlist ')' block  (22)
	funct : tVOID tIDENTIFIER '(' . varlist ')'  (26)
	varlist : .  (72)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	'<'  shift 7
	'['  shift 8
	')'  reduce 72
	','  reduce 72

	var  goto 43
	varlist  goto 44
	qualif  goto 45
	type  goto 46
	spectype  goto 15


state 30
	spectype : '<' tTYPEINT '>' .  (29)

	.  reduce 29


state 31
	spectype : '<' tTYPEREAL '>' .  (30)

	.  reduce 30


state 32
	spectype : '<' tTYPESTRING '>' .  (31)

	.  reduce 31


state 33
	spectype : '<' spectype '>' .  (32)

	.  reduce 32


state 34
	spectype : '[' tTYPEINT ']' .  (33)

	.  reduce 33


state 35
	spectype : '[' tTYPEREAL ']' .  (34)

	.  reduce 34


state 36
	spectype : '[' tTYPESTRING ']' .  (35)

	.  reduce 35


state 37
	spectype : '[' spectype ']' .  (36)

	.  reduce 36


state 38
	listd : listd tENDLINE . decl  (48)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	tVOID  shift 6
	'<'  shift 7
	'['  shift 8
	.  error

	decl  goto 47
	funct  goto 11
	var  goto 12
	qualif  goto 13
	type  goto 14
	spectype  goto 15


state 39
	funct : qualif tVOID tIDENTIFIER . '(' varlist ')' fret  (17)
	funct : qualif tVOID tIDENTIFIER . '(' varlist ')' fret block  (18)
	funct : qualif tVOID tIDENTIFIER . '(' varlist ')' block  (19)
	funct : qualif tVOID tIDENTIFIER . '(' varlist ')'  (25)

	'('  shift 48
	.  error


state 40
	var : qualif type tIDENTIFIER . '=' expr  (4)
	funct : qualif type tIDENTIFIER . '(' varlist ')' fret  (11)
	funct : qualif type tIDENTIFIER . '(' varlist ')' fret block  (12)
	funct : qualif type tIDENTIFIER . '(' varlist ')' block  (13)
	funct : qualif type tIDENTIFIER . '(' varlist ')'  (23)

	'='  shift 49
	'('  shift 50
	.  error


state 41
	var : type tIDENTIFIER '=' . expr  (5)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 61


state 42
	funct : type tIDENTIFIER '(' . varlist ')' fret  (14)
	funct : type tIDENTIFIER '(' . varlist ')' fret block  (15)
	funct : type tIDENTIFIER '(' . varlist ')' block  (16)
	funct : type tIDENTIFIER '(' . varlist ')'  (24)
	varlist : .  (72)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	'<'  shift 7
	'['  shift 8
	')'  reduce 72
	','  reduce 72

	var  goto 43
	varlist  goto 62
	qualif  goto 45
	type  goto 46
	spectype  goto 15


state 43
	varlist : var .  (70)

	.  reduce 70


state 44
	funct : tVOID tIDENTIFIER '(' varlist . ')' fret  (20)
	funct : tVOID tIDENTIFIER '(' varlist . ')' fret block  (21)
	funct : tVOID tIDENTIFIER '(' varlist . ')' block  (22)
	funct : tVOID tIDENTIFIER '(' varlist . ')'  (26)
	varlist : varlist . ',' var  (71)

	')'  shift 63
	','  shift 64
	.  error


state 45
	var : qualif . type tIDENTIFIER '=' expr  (4)

	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	'<'  shift 7
	'['  shift 8
	.  error

	type  goto 65
	spectype  goto 15


state 46
	var : type . tIDENTIFIER '=' expr  (5)
	var : type . tIDENTIFIER  (6)

	tIDENTIFIER  shift 66
	.  error


state 47
	listd : listd tENDLINE decl .  (48)

	.  reduce 48


state 48
	funct : qualif tVOID tIDENTIFIER '(' . varlist ')' fret  (17)
	funct : qualif tVOID tIDENTIFIER '(' . varlist ')' fret block  (18)
	funct : qualif tVOID tIDENTIFIER '(' . varlist ')' block  (19)
	funct : qualif tVOID tIDENTIFIER '(' . varlist ')'  (25)
	varlist : .  (72)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	'<'  shift 7
	'['  shift 8
	')'  reduce 72
	','  reduce 72

	var  goto 43
	varlist  goto 67
	qualif  goto 45
	type  goto 46
	spectype  goto 15


state 49
	var : qualif type tIDENTIFIER '=' . expr  (4)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 68


state 50
	funct : qualif type tIDENTIFIER '(' . varlist ')' fret  (11)
	funct : qualif type tIDENTIFIER '(' . varlist ')' fret block  (12)
	funct : qualif type tIDENTIFIER '(' . varlist ')' block  (13)
	funct : qualif type tIDENTIFIER '(' . varlist ')'  (23)
	varlist : .  (72)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	'<'  shift 7
	'['  shift 8
	')'  reduce 72
	','  reduce 72

	var  goto 43
	varlist  goto 69
	qualif  goto 45
	type  goto 46
	spectype  goto 15


state 51
	expr : tINTEGER .  (78)

	.  reduce 78


state 52
	expr : tREAL .  (80)

	.  reduce 80


state 53
	expr : tIDENTIFIER . '=' expr  (79)
	expr : tIDENTIFIER .  (82)
	expr : tIDENTIFIER . '(' exprlist ')'  (102)
	expr : tIDENTIFIER . '[' expr ']'  (105)
	expr : tIDENTIFIER . '[' expr ']' '=' expr  (106)

	'='  shift 70
	'('  shift 71
	'['  shift 72
	$end  reduce 82
	tDO  reduce 82
	tUNTIL  reduce 82
	tTHEN  reduce 82
	tELSIF  reduce 82
	tEND_BLOCK  reduce 82
	tENDLINE  reduce 82
	tELSE  reduce 82
	'|'  reduce 82
	'&'  reduce 82
	tPN  reduce 82
	'!'  reduce 82
	tEQ  reduce 82
	tNE  reduce 82
	tGE  reduce 82
	tLE  reduce 82
	'>'  reduce 82
	'<'  reduce 82
	'+'  reduce 82
	'-'  reduce 82
	'*'  reduce 82
	'/'  reduce 82
	'%'  reduce 82
	'^'  reduce 82
	'?'  reduce 82
	')'  reduce 82
	']'  reduce 82
	';'  reduce 82
	','  reduce 82


state 54
	string : tSTRING .  (41)

	.  reduce 41


state 55
	expr : '+' . expr  (83)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 73


state 56
	expr : '-' . expr  (84)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 74


state 57
	expr : '#' . expr  (107)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 75


state 58
	expr : '(' . expr ')'  (99)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 76


state 59
	expr : '@' .  (100)
	expr : '@' . '=' expr  (103)
	expr : '@' . '(' exprlist ')'  (104)

	'='  shift 77
	'('  shift 78
	$end  reduce 100
	tDO  reduce 100
	tUNTIL  reduce 100
	tTHEN  reduce 100
	tELSIF  reduce 100
	tEND_BLOCK  reduce 100
	tENDLINE  reduce 100
	tELSE  reduce 100
	'|'  reduce 100
	'&'  reduce 100
	tPN  reduce 100
	'!'  reduce 100
	tEQ  reduce 100
	tNE  reduce 100
	tGE  reduce 100
	tLE  reduce 100
	'>'  reduce 100
	'<'  reduce 100
	'+'  reduce 100
	'-'  reduce 100
	'*'  reduce 100
	'/'  reduce 100
	'%'  reduce 100
	'^'  reduce 100
	'?'  reduce 100
	')'  reduce 100
	']'  reduce 100
	';'  reduce 100
	','  reduce 100


state 60
	string : string . tSTRING  (42)
	expr : string .  (81)

	tSTRING  shift 79
	$end  reduce 81
	tDO  reduce 81
	tUNTIL  reduce 81
	tTHEN  reduce 81
	tELSIF  reduce 81
	tEND_BLOCK  reduce 81
	tENDLINE  reduce 81
	tELSE  reduce 81
	'|'  reduce 81
	'&'  reduce 81
	tPN  reduce 81
	'!'  reduce 81
	tEQ  reduce 81
	tNE  reduce 81
	tGE  reduce 81
	tLE  reduce 81
	'>'  reduce 81
	'<'  reduce 81
	'+'  reduce 81
	'-'  reduce 81
	'*'  reduce 81
	'/'  reduce 81
	'%'  reduce 81
	'^'  reduce 81
	'?'  reduce 81
	')'  reduce 81
	']'  reduce 81
	';'  reduce 81
	','  reduce 81


state 61
	var : type tIDENTIFIER '=' expr .  (5)
	expr : expr . '?'  (85)
	expr : expr . '+' expr  (86)
	expr : expr . '-' expr  (87)
	expr : expr . '*' expr  (88)
	expr : expr . '/' expr  (89)
	expr : expr . '%' expr  (90)
	expr : expr . '<' expr  (91)
	expr : expr . '>' expr  (92)
	expr : expr . tGE expr  (93)
	expr : expr . tLE expr  (94)
	expr : expr . tNE expr  (95)
	expr : expr . tEQ expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . '&' expr  (98)
	expr : expr . '^' expr  (101)

	'|'  shift 80
	'&'  shift 81
	tEQ  shift 82
	tNE  shift 83
	tGE  shift 84
	tLE  shift 85
	'>'  shift 86
	'<'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'%'  shift 92
	'^'  shift 93
	'?'  shift 94
	$end  reduce 5
	tEND_BLOCK  reduce 5
	tENDLINE  reduce 5
	')'  reduce 5
	';'  reduce 5
	','  reduce 5


state 62
	funct : type tIDENTIFIER '(' varlist . ')' fret  (14)
	funct : type tIDENTIFIER '(' varlist . ')' fret block  (15)
	funct : type tIDENTIFIER '(' varlist . ')' block  (16)
	funct : type tIDENTIFIER '(' varlist . ')'  (24)
	varlist : varlist . ',' var  (71)

	')'  shift 95
	','  shift 64
	.  error


state 63
	funct : tVOID tIDENTIFIER '(' varlist ')' . fret  (20)
	funct : tVOID tIDENTIFIER '(' varlist ')' . fret block  (21)
	funct : tVOID tIDENTIFIER '(' varlist ')' . block  (22)
	funct : tVOID tIDENTIFIER '(' varlist ')' .  (26)

	tSTART_BLOCK  shift 96
	'='  shift 97
	$end  reduce 26
	tEND_BLOCK  reduce 26
	tENDLINE  reduce 26

	fret  goto 98
	block  goto 99


state 64
	varlist : varlist ',' . var  (71)

	tUSE  shift 1
	tPUBLIC  shift 2
	tTYPEINT  shift 3
	tTYPEREAL  shift 4
	tTYPESTRING  shift 5
	'<'  shift 7
	'['  shift 8
	.  error

	var  goto 100
	qualif  goto 45
	type  goto 46
	spectype  goto 15


state 65
	var : qualif type . tIDENTIFIER '=' expr  (4)

	tIDENTIFIER  shift 101
	.  error


state 66
	var : type tIDENTIFIER . '=' expr  (5)
	var : type tIDENTIFIER .  (6)

	'='  shift 41
	')'  reduce 6
	';'  reduce 6
	','  reduce 6


state 67
	funct : qualif tVOID tIDENTIFIER '(' varlist . ')' fret  (17)
	funct : qualif tVOID tIDENTIFIER '(' varlist . ')' fret block  (18)
	funct : qualif tVOID tIDENTIFIER '(' varlist . ')' block  (19)
	funct : qualif tVOID tIDENTIFIER '(' varlist . ')'  (25)
	varlist : varlist . ',' var  (71)

	')'  shift 102
	','  shift 64
	.  error


state 68
	var : qualif type tIDENTIFIER '=' expr .  (4)
	expr : expr . '?'  (85)
	expr : expr . '+' expr  (86)
	expr : expr . '-' expr  (87)
	expr : expr . '*' expr  (88)
	expr : expr . '/' expr  (89)
	expr : expr . '%' expr  (90)
	expr : expr . '<' expr  (91)
	expr : expr . '>' expr  (92)
	expr : expr . tGE expr  (93)
	expr : expr . tLE expr  (94)
	expr : expr . tNE expr  (95)
	expr : expr . tEQ expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . '&' expr  (98)
	expr : expr . '^' expr  (101)

	'|'  shift 80
	'&'  shift 81
	tEQ  shift 82
	tNE  shift 83
	tGE  shift 84
	tLE  shift 85
	'>'  shift 86
	'<'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'%'  shift 92
	'^'  shift 93
	'?'  shift 94
	$end  reduce 4
	tEND_BLOCK  reduce 4
	tENDLINE  reduce 4
	')'  reduce 4
	';'  reduce 4
	','  reduce 4


state 69
	funct : qualif type tIDENTIFIER '(' varlist . ')' fret  (11)
	funct : qualif type tIDENTIFIER '(' varlist . ')' fret block  (12)
	funct : qualif type tIDENTIFIER '(' varlist . ')' block  (13)
	funct : qualif type tIDENTIFIER '(' varlist . ')'  (23)
	varlist : varlist . ',' var  (71)

	')'  shift 103
	','  shift 64
	.  error


state 70
	expr : tIDENTIFIER '=' . expr  (79)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 104


state 71
	expr : tIDENTIFIER '(' . exprlist ')'  (102)
	exprlist : .  (75)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	')'  reduce 75
	','  reduce 75

	string  goto 60
	exprlist  goto 105
	expr  goto 106


state 72
	expr : tIDENTIFIER '[' . expr ']'  (105)
	expr : tIDENTIFIER '[' . expr ']' '=' expr  (106)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 107


state 73
	expr : '+' expr .  (83)
	expr : expr . '?'  (85)
	expr : expr . '+' expr  (86)
	expr : expr . '-' expr  (87)
	expr : expr . '*' expr  (88)
	expr : expr . '/' expr  (89)
	expr : expr . '%' expr  (90)
	expr : expr . '<' expr  (91)
	expr : expr . '>' expr  (92)
	expr : expr . tGE expr  (93)
	expr : expr . tLE expr  (94)
	expr : expr . tNE expr  (95)
	expr : expr . tEQ expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . '&' expr  (98)
	expr : expr . '^' expr  (101)

	.  reduce 83


state 74
	expr : '-' expr .  (84)
	expr : expr . '?'  (85)
	expr : expr . '+' expr  (86)
	expr : expr . '-' expr  (87)
	expr : expr . '*' expr  (88)
	expr : expr . '/' expr  (89)
	expr : expr . '%' expr  (90)
	expr : expr . '<' expr  (91)
	expr : expr . '>' expr  (92)
	expr : expr . tGE expr  (93)
	expr : expr . tLE expr  (94)
	expr : expr . tNE expr  (95)
	expr : expr . tEQ expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . '&' expr  (98)
	expr : expr . '^' expr  (101)

	.  reduce 84


state 75
	expr : expr . '?'  (85)
	expr : expr . '+' expr  (86)
	expr : expr . '-' expr  (87)
	expr : expr . '*' expr  (88)
	expr : expr . '/' expr  (89)
	expr : expr . '%' expr  (90)
	expr : expr . '<' expr  (91)
	expr : expr . '>' expr  (92)
	expr : expr . tGE expr  (93)
	expr : expr . tLE expr  (94)
	expr : expr . tNE expr  (95)
	expr : expr . tEQ expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . '&' expr  (98)
	expr : expr . '^' expr  (101)
	expr : '#' expr .  (107)

	.  reduce 107


state 76
	expr : expr . '?'  (85)
	expr : expr . '+' expr  (86)
	expr : expr . '-' expr  (87)
	expr : expr . '*' expr  (88)
	expr : expr . '/' expr  (89)
	expr : expr . '%' expr  (90)
	expr : expr . '<' expr  (91)
	expr : expr . '>' expr  (92)
	expr : expr . tGE expr  (93)
	expr : expr . tLE expr  (94)
	expr : expr . tNE expr  (95)
	expr : expr . tEQ expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . '&' expr  (98)
	expr : '(' expr . ')'  (99)
	expr : expr . '^' expr  (101)

	'|'  shift 80
	'&'  shift 81
	tEQ  shift 82
	tNE  shift 83
	tGE  shift 84
	tLE  shift 85
	'>'  shift 86
	'<'  shift 87
	'+'  shift 88
	'-'  shift 89
	'*'  shift 90
	'/'  shift 91
	'%'  shift 92
	'^'  shift 93
	'?'  shift 94
	')'  shift 108
	.  error


state 77
	expr : '@' '=' . expr  (103)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 109


state 78
	expr : '@' '(' . exprlist ')'  (104)
	exprlist : .  (75)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	')'  reduce 75
	','  reduce 75

	string  goto 60
	exprlist  goto 110
	expr  goto 106


state 79
	string : string tSTRING .  (42)

	.  reduce 42


state 80
	expr : expr '|' . expr  (97)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 111


state 81
	expr : expr '&' . expr  (98)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 112


state 82
	expr : expr tEQ . expr  (96)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 113


state 83
	expr : expr tNE . expr  (95)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 114


state 84
	expr : expr tGE . expr  (93)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error

	string  goto 60
	expr  goto 115


state 85
	expr : expr tLE . expr  (94)

	tINTEGER  shift 51
	tREAL  shift 52
	tIDENTIFIER  shift 53
	tSTRING  shift 54
	'+'  shift 55
	'-'  shift 56
	'#'  shift 57
	'('  shift 58
	'@'  shift 59
	.  error
